==================== 2.25.1 ====================

==================== 2.24.0.1 ====================

2008-07-02  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Andrey Gusev <ronne@list.ru>

	* drw-break-window.c: (drw_break_window_init): make the typing break
	window modal so it properly locks the screen when apps like firefox
	are running in fullscreen mode (bug #441786)

2008-06-27  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Andrey Gusev <ronne@list.ru>

	* drwright.c: (break_window_postpone_cb): when postponing a break
	don't go right back to warn state, but award some bonus time according
	to the already elapsed break time (bug #133295)

2008-06-15  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Andrey Gusev <ronne@list.ru>

	* drwright.c: (update_icon), (blink_timeout_cb),
	(maybe_change_state), (update_tooltip), (break_window_postpone_cb):
	when postponing a voluntary break, go back to the state before taking
	the break instead of going to warn state as we do when a regular
	break is postponed (bug #134595)

==================== 2.23.2 ====================

2008-03-24  Jens Granseuer  <jensgr@gmx.net>

	* drw-break-window.c: (drw_break_window_init): amend previous commit
	to use GTK_STOCK_STOP instead of "gtk-stop"

2008-03-24  Jens Granseuer  <jensgr@gmx.net>

	* bar*.png: new Tango-style icons by David Prieto
	<frandavid100@gmail.com> (bug #523965)

	* drw-break-window.c: (drw_break_window_init): replace custom stop icon
	by gtk-stop stock icon
	* Makefile.am:
	* stop.png: remove

2008-02-05  Jens Granseuer  <jensgr@gmx.net>

	* drwright.c: add a comment for translators (bug #514598)

2007-06-26  Michael Terry  <mike@mterry.name>

	* Makefile.am: Update icon cache on uninstall as well as install.
	Part of bug #450777.

2007-06-08  Christian Persch  <chpe@gnome.org>

	* main.c: (main): NULL-terminate the options array.
	* ChangeLog: fixed.

2007-06-05  Christian Persch  <chpe@gnome.org>
